Added GitHub icon with appropriate link. Removed confetti effect.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button id="add-task" onclick=addTask()><i class="fa-solid fa-plus fa-2x"></i></button>
             </div>
         </main>
-        <footer>Made with ❤️ by TheRealSouls</footer>
+        <footer>Made with ❤️ by TheRealSouls |<a href="https://github.com/TheRealSouls" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-2x"></i></a></footer>
         <dialog id="task-dialog">
             <h3>What is the name of your new task?</h3>
             <form id="form" action="#">
